include/cqr_mkl_ext.h

/* QR factorization: A -> (R, Householder vectors) in ap, tau in taup. Drop-in
 * for mkl_?geqrf_compact (identical signature). */
void cqr_mkl_dgeqrf_compact(MKL_LAYOUT layout, MKL_INT m, MKL_INT n, double *ap,
                            MKL_INT ldap, double *taup, double *work, MKL_INT lwork,
                            MKL_INT *info, MKL_COMPACT_PACK format, MKL_INT nm);
void cqr_mkl_sgeqrf_compact(MKL_LAYOUT layout, MKL_INT m, MKL_INT n, float *ap,
                            MKL_INT ldap, float *taup, float *work, MKL_INT lwork,
                            MKL_INT *info, MKL_COMPACT_PACK format, MKL_INT nm);
/* C := op(Q) C (side 'L') or C op(Q) (side 'R'), op(Q) = Q ('N') or Q^T
 * ('T'/'C'), from the (H, tau) of a compact QR: LAPACK ?ormqr plus layout,
 * format and nm. */
void cqr_mkl_dormqr_compact(MKL_LAYOUT layout, char side, char trans, MKL_INT m,
                            MKL_INT n, MKL_INT k, const double *ap, MKL_INT ldap,
                            const double *taup, double *cp, MKL_INT ldcp, double *work,
                            MKL_INT lwork, MKL_INT *info, MKL_COMPACT_PACK format,
                            MKL_INT nm);
void cqr_mkl_sormqr_compact(MKL_LAYOUT layout, char side, char trans, MKL_INT m,
                            MKL_INT n, MKL_INT k, const float *ap, MKL_INT ldap,
                            const float *taup, float *cp, MKL_INT ldcp, float *work,
                            MKL_INT lwork, MKL_INT *info, MKL_COMPACT_PACK format,
                            MKL_INT nm);
/* Cholesky factorization of a batch of symmetric positive-definite n x n
 * matrices: A = L L^T (MKL_LOWER) or A = U^T U (MKL_UPPER). Drop-in for
 * mkl_?potrf_compact (identical signature). On exit the named triangle holds
 * the factor; the other is untouched. No workspace and no SPD test: a non-SPD
 * lane poisons itself with NaN/Inf rather than reporting info = j. */
void cqr_mkl_dpotrf_compact(MKL_LAYOUT layout, MKL_UPLO uplo, MKL_INT n, double *ap,
                            MKL_INT ldap, MKL_INT *info, MKL_COMPACT_PACK format,
                            MKL_INT nm);
void cqr_mkl_spotrf_compact(MKL_LAYOUT layout, MKL_UPLO uplo, MKL_INT n, float *ap,
                            MKL_INT ldap, MKL_INT *info, MKL_COMPACT_PACK format,
                            MKL_INT nm);
/* LDL^T factorization without pivoting of a batch of symmetric n x n matrices:
 * A = L D L^T (MKL_LOWER) or A = U^T D U (MKL_UPPER; the transpose dual, as
 * ?potrf's U^T U, not LAPACK ?sytrf's U D U^T). mkl_?potrf_compact's signature
 * (MKL has no compact sytrf). On exit the diagonal holds D and the strict
 * off-diagonal of the named triangle the unit L/U; the other triangle is
 * untouched. No workspace, no ipiv, no singularity test: indefinite matrices
 * factor (no sqrt), but a zero pivot -- a singular leading principal minor --
 * poisons its lane with Inf/NaN rather than reporting info = j. */
void cqr_mkl_dsytrfnp_compact(MKL_LAYOUT layout, MKL_UPLO uplo, MKL_INT n, double *ap,
                              MKL_INT ldap, MKL_INT *info, MKL_COMPACT_PACK format,
                              MKL_INT nm);
void cqr_mkl_ssytrfnp_compact(MKL_LAYOUT layout, MKL_UPLO uplo, MKL_INT n, float *ap,
                              MKL_INT ldap, MKL_INT *info, MKL_COMPACT_PACK format,
                              MKL_INT nm);
/* Solve A X = B from the factor of cqr_mkl_?sytrfnp_compact (same uplo), in
 * place: L z = B; D w = z; L^T X = w (MKL_LOWER), or U^T z = B; D w = z;
 * U X = w (MKL_UPPER). LAPACK ?sytrs minus ipiv, plus layout/format/nm. B is
 * n x nrhs with ldbp >= n (column-major) or >= nrhs (row-major); the factor is
 * not modified. A zero D(i) yields Inf/NaN in that lane's X, not an error. */
void cqr_mkl_dsytrsnp_compact(MKL_LAYOUT layout, MKL_UPLO uplo, MKL_INT n, MKL_INT nrhs,
                              const double *ap, MKL_INT ldap, double *bp, MKL_INT ldbp,
                              MKL_INT *info, MKL_COMPACT_PACK format, MKL_INT nm);
void cqr_mkl_ssytrsnp_compact(MKL_LAYOUT layout, MKL_UPLO uplo, MKL_INT n, MKL_INT nrhs,
                              const float *ap, MKL_INT ldap, float *bp, MKL_INT ldbp,
                              MKL_INT *info, MKL_COMPACT_PACK format, MKL_INT nm);
/* Symmetric solve A X = B in one pass: cqr_mkl_?sytrfnp_compact followed by
 * cqr_mkl_?sytrsnp_compact, fused per group of V matrices so each factor is
 * solved with while cache-resident and the whole solve is one threaded group
 * loop. LAPACK ?sysv minus ipiv and workspace. On exit ap holds the (D, L|U)
 * factor exactly as ?sytrfnp leaves it and bp holds X; the result is
 * bit-identical to the two separate calls. */
void cqr_mkl_dsysvnp_compact(MKL_LAYOUT layout, MKL_UPLO uplo, MKL_INT n, MKL_INT nrhs,
                             double *ap, MKL_INT ldap, double *bp, MKL_INT ldbp,
                             MKL_INT *info, MKL_COMPACT_PACK format, MKL_INT nm);
void cqr_mkl_ssysvnp_compact(MKL_LAYOUT layout, MKL_UPLO uplo, MKL_INT n, MKL_INT nrhs,
                             float *ap, MKL_INT ldap, float *bp, MKL_INT ldbp,
                             MKL_INT *info, MKL_COMPACT_PACK format, MKL_INT nm);
/* Triangular solve with multiple right-hand sides, in place:
 *     op(A) X = alpha B  (MKL_LEFT)   or   X op(A) = alpha B  (MKL_RIGHT),
 * A the order-s (s = m left, n right) unit/non-unit upper/lower triangular
 * factor, op(A) = A (MKL_NOTRANS) or A^T (MKL_TRANS / MKL_CONJTRANS, the same
 * for real types), B (m x n) overwritten by X. Drop-in for mkl_?trsm_compact
 * (identical signature): like the BLAS ?trsm it batches, no workspace, no info. */
void cqr_mkl_dtrsm_compact(MKL_LAYOUT layout, MKL_SIDE side, MKL_UPLO uplo,
                           MKL_TRANSPOSE transa, MKL_DIAG diag, MKL_INT m, MKL_INT n,
                           double alpha, const double *ap, MKL_INT ldap, double *bp,
                           MKL_INT ldbp, MKL_COMPACT_PACK format, MKL_INT nm);
void cqr_mkl_strsm_compact(MKL_LAYOUT layout, MKL_SIDE side, MKL_UPLO uplo,
                           MKL_TRANSPOSE transa, MKL_DIAG diag, MKL_INT m, MKL_INT n,
                           float alpha, const float *ap, MKL_INT ldap, float *bp,
                           MKL_INT ldbp, MKL_COMPACT_PACK format, MKL_INT nm);
/* Least-squares (op(A) with more rows than columns) or minimum-norm (more
 * columns than rows) solution of the full-rank systems op(A) X = B, op(A) = A
 * ('N') or A^T ('T'/'C'), A m x n, B max(m,n) x nrhs: LAPACK ?gels plus layout,
 * format and nm. On exit ap holds the QR (m >= n) or LQ (m < n) factorization
 * of A, B's leading rows the solution (and, for least squares, its trailing
 * m - n rows the residual), and work the reflector scalars tau. lwork = -1
 * queries the workspace (see the workspace note above); min(m,n) = 0 sets
 * B := 0. Rank deficiency is not detected (no info > 0): a zero diagonal of R
 * divides through to Inf/NaN in that lane. */
void cqr_mkl_dgels_compact(MKL_LAYOUT layout, char trans, MKL_INT m, MKL_INT n,
                           MKL_INT nrhs, double *ap, MKL_INT ldap, double *bp,
                           MKL_INT ldbp, double *work, MKL_INT lwork, MKL_INT *info,
                           MKL_COMPACT_PACK format, MKL_INT nm);
void cqr_mkl_sgels_compact(MKL_LAYOUT layout, char trans, MKL_INT m, MKL_INT n,
                           MKL_INT nrhs, float *ap, MKL_INT ldap, float *bp, MKL_INT ldbp,
                           float *work, MKL_INT lwork, MKL_INT *info,
                           MKL_COMPACT_PACK format, MKL_INT nm);